ocp/backend-v1-deployment.yml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: backend-v1
  labels:
    app: backend
    version: 1.0.0
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: backend
        version: 1.0.0
      annotations:
        sidecar.istio.io/inject: "true"
    spec:
      containers:
      - name: backend
        image: quay.io/voravitl/backend-js:1.0.0
        imagePullPolicy: Always
        resources:
          requests:
            cpu: "0.1"
            memory: 60Mi
          limits:
            cpu: "0.2"
            memory: 100Mi
        ports:
        - containerPort: 8080
