ocp/backend-v3-deployment.yml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: backend-v3
  # labels:
  #   app: backend
  #   version: v2
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: backend-v3
        version: v3
      annotations:
        sidecar.istio.io/inject: "true"
    spec:
      containers:
      - name: backend
        image: quay.io/voravitl/backend-js:v3
        imagePullPolicy: Always
        resources:
          requests:
            cpu: "0.1"
            memory: 60Mi
          limits:
            cpu: "0.2"
            memory: 100Mi
        ports:
        - containerPort: 8080
