ocp/frontend-v2-deployment.yml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: frontend-v2
  # labels:
  #   app: frontend
  #   version: v2
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: frontend
        version: v2
      annotations:
        sidecar.istio.io/inject: "true"
    spec:
      containers:
      - name: frontend
        image: quay.io/voravitl/frontend-js:v2
        imagePullPolicy: Always
        resources:
          requests:
            cpu: "0.1"
            memory: 60Mi
          limits:
            cpu: "0.2"
            memory: 100Mi
        ports:
        - containerPort: 8080
