ocp/ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: frontend
  labels:
        app: frontend
spec:
  rules:
  - host: frontend-user1.apps.cluster-bnk-3f91.bnk-3f91.example.opentlc.com
    http:
     paths:
     - path: /
       backend:
        serviceName: frontend
        servicePort: 8080
